tests/errors/pure_cclass_without_body.py
# mode: error


class Test(object):
    pass


_ERRORS = """
3:5: C class 'Test' is declared but not defined
"""
